--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="keywords"
       content="¡Vamos a Celebrar!, ​Ya Solo Faltan..., ¡Acompáñanos a el día!, Te esperamos enNombre del salón, ¡No Faltes!​, Confirma tu asistencia">
 
-     <meta property="og:title" content="Invitación Emely Ivanna">
+     <meta property="og:title" content="Invitación Regina y Yaquelin">
     <meta property="og:description" content="¡Vamos a celebrar!">
-    <meta property="og:image" itemprop="image" content="https://invitacion-interactiva.netlify.app/files/miniatura.png" />
+    <meta property="og:image" itemprop="image" content="https://invitacion-Regina-Yaquelin.netlify.app/files/miniatura.png" />
 
     
     <title>Invitación</title>
@@ -56,14 +56,14 @@ document.addEventListener('DOMContentLoaded', function() {
       botonDireccion.style.opacity = '0'; // Ocultar el botón
       botonDireccion.style.pointerEvents = 'none'; // Deshabilitar eventos de clic
     }
-
+/*
     if (currentTime >= 41) {
       botonAsistencia.style.opacity = '1'; // Mostrar el botón
       botonAsistencia.style.pointerEvents = 'auto'; // Habilitar eventos de clic
     } else {
       botonAsistencia.style.opacity = '0'; // Ocultar el botón
       botonAsistencia.style.pointerEvents = 'none'; // Deshabilitar eventos de clic
-    }
+    }*/
   });
 
   video.addEventListener('ended', function() {
@@ -121,7 +121,7 @@ document.addEventListener('DOMContentLoaded', function() {
   width: 200px;
   height: 35px;
   border-radius: 25px;
-  background-color: #FF66C4;
+  background-color: #7B36C6;
   margin-bottom: 0px; /* Ajusta el valor según el espaciado deseado entre los botones */
   font-size: 12px;
   color: #ffffff;
@@ -135,7 +135,7 @@ document.addEventListener('DOMContentLoaded', function() {
   width: 200px;
   height: 35px;
   border-radius: 25px;
-  background-color: #FF66C4;
+  background-color: #7B36C6;
   margin-bottom: 0px; /* Ajusta el valor según el espaciado deseado entre los botones */
   font-size: 12px;
   color: #ffffff;
@@ -159,18 +159,18 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <div id="button-container">
 
-      <a id="boton-direccion" href="https://maps.app.goo.gl/CFgL4Kr592EYFqhdA"
+      <a id="boton-direccion" href="https://maps.app.goo.gl/yV4tkC8xQ3CAa4kL6"
         class="button fa-solid fa-location-dot"
         style="color: #ffffff;"> <i class="fas fa-map-marker-alt"></i> VER
         UBICACIÓN
       </a>
 
-      <a id="boton-asistencia"
+    <!--  <a id="boton-asistencia"
         href="https://api.whatsapp.com/send?phone=+5216141426036&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3"
         class="button">
         <i class="fab fa-whatsapp"></i>CONFIRMAR ASISTENCIA</a>
     </div>
-
+-->
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js"
       crossorigin="anonymous"></script>
   </body>
